--- a/popup.css
+++ b/popup.css
@@ -40,19 +40,23 @@ h3 > a:hover {
 #try {
   font-size: 0.8em;
   font-weight: bold;
-  color: white;
+  color: #FF9000;
   text-decoration: none;
-  background-color: #FF9000;
+  border: solid 1px #FF9000;
+  background-color: transparent;
   padding: 5px 25px 5px 25px;
-  border-radius: 15px;
+  border-radius: 5px;
   position: absolute;
-  top: 10px;
+  bottom: 10px;
   right: 10px;
   cursor: pointer;
+  transition-duration: 0.6s;
 }
 
 #try:hover {
-  opacity: 0.8;
+  background-color: #FF9000;
+  color: black;
+  transition-duration: 0.6s;
 }
 
 .textarea-wrapper {
@@ -116,8 +120,8 @@ button:hover {
   height: 15px;
   width: auto;
   position: absolute;
-  bottom: 10px;
-  left: 10px;
+  top: 10px;
+  right: 10px;
   cursor: pointer;
 }
 
@@ -130,7 +134,7 @@ button:hover {
   color: #A6A8AA;
   position: absolute;
   bottom: 10px;
-  right: 10px;
+  left: 10px;
   cursor: pointer;
 }
 
